tdf#109364: fix assert in LibXSLTTransformer.cxx

by replacing createFromAscii with OStringToOUString + RTL_TEXTENCODING_UTF8

Change-Id: I92ab20812968d13546132afb65c9b956a9c8be8e
Reviewed-on: https://gerrit.libreoffice.org/40456
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>